<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/button_groups">
        <item
            android:id="@+id/sms_nav"
            android:icon="@drawable/ic_sms_black_24dp"
            android:title="@string/action_sms" />
        <item
            android:id="@+id/email_nav"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/action_email" />
        <item
            android:id="@+id/settings_nav"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/delete_nav"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/action_delete" />
        <item
            android:id="@+id/add_nav"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/action_add" />
    </group>

</menu>
